# ChangeLog for sci-libs/cctbx
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/cctbx/ChangeLog,v 1.11 2011/01/15 14:44:16 jlec Exp $

  15 Jan 2011; Justin Lecher <jlec@gentoo.org>
  files/2010.03.29.2334-boost.patch, cctbx-2010.03.29.2334-r2.ebuild,
  cctbx-2010.03.29.2334-r3.ebuild:
  Prefix boost detection fix

  29 Dec 2010; Justin Lecher <jlec@gentoo.org> cctbx-2009.11.01.0123-r1.ebuild,
  cctbx-2010.03.29.2334-r1.ebuild, cctbx-2010.03.29.2334-r2.ebuild,
  cctbx-2010.03.29.2334-r3.ebuild:
  Added missing dependency on clipper

  16 Dec 2010; Justin Lecher <jlec@gentoo.org> cctbx-2009.11.01.0123-r1.ebuild,
  cctbx-2010.03.29.2334-r1.ebuild, cctbx-2010.03.29.2334-r2.ebuild,
  cctbx-2010.03.29.2334-r3.ebuild:
  Added missing RDEPEND on sci-libs/clipper

*cctbx-2010.03.29.2334-r3 (15 Dec 2010)

  15 Dec 2010; Justin Lecher <jlec@gentoo.org>
  +cctbx-2010.03.29.2334-r3.ebuild:
  Fixing all binaray wrappers

  12 Sep 2010; Justin Lecher <jlec@gentoo.org>
  cctbx-2009.11.01.0123-r1.ebuild, cctbx-2010.03.29.2334-r1.ebuild,
  cctbx-2010.03.29.2334-r2.ebuild:
  Switched to tc-has-openmp and remove built_with_use

*cctbx-2010.03.29.2334-r2 (12 Sep 2010)

  12 Sep 2010; Justin Lecher <jlec@gentoo.org>
  +files/2010.03.29.2334-boost.patch, +cctbx-2010.03.29.2334-r2.ebuild,
  +files/2010.03.29.2334-clipper.patch, +files/2010.03.29.2334-flags.patch,
  +files/2010.03.29.2334-soname.patch:
  Big rewrite

*cctbx-2010.03.29.2334-r1 (03 Jul 2010)

  03 Jul 2010; Justin Lecher <jlec@gentoo.org>
  +files/2010.03.29.2334-tst_server.py.patch, -cctbx-2010.03.29.2334.ebuild,
  +cctbx-2010.03.29.2334-r1.ebuild:
  Fix for invalid python syntax

  28 Jun 2010; Christoph Mende <angelos@gentoo.org>
  cctbx-2010.03.29.2334.ebuild:
  Stable on amd64 wrt bug #325965

  16 Jun 2010; Justin Lecher <jlec@gentoo.org>
  cctbx-2009.11.01.0123-r1.ebuild, cctbx-2010.03.29.2334.ebuild:
  Last fixes for prefix and keyworded for *-linux
