@@ -6,18 +6,15 @@ AUX 2010.03.29.2334-clipper.patch 2209 RMD160 1bfc13f0834e837a55f0e41554649acd1e
 AUX 2010.03.29.2334-flags.patch 3336 RMD160 fdbb0b71499e00c666629e1ff04b5bdcbe376b13 SHA1 ef97099dbd93727bd356015f22e82480a48e1a0c SHA256 769edb3e5dcb608b54ab4d33c5933b523f73ff62c6cb627c4eb4b1a2086e40b1
 AUX 2010.03.29.2334-soname.patch 5177 RMD160 c6cad498c4edb7046696428008408b126efa954c SHA1 7c5d78110c4270c9ca113ae5ea77c7c2451e2b21 SHA256 dd4ea6dbf34c1b2d9572adec5a33fe6a73b1a99e8c4364123e69382bb161ce74
 AUX 2010.03.29.2334-tst_server.py.patch 774 RMD160 12e1115b2ccc0b6b01b365925bf311d29ef08c7a SHA1 09549cc6103f502777acced13a3ed483d713dfc0 SHA256 df058d16d2dc5beaac9f1a1fbf2e640994c7e881d449eb01ac338dadbfb15ac3
-DIST cctbx-2009.11.01.0123.tar.gz 14604079 RMD160 77cc84d4b9e35e7a87f807d8669efb939b2e82ce SHA1 7db71a62786b82f47999919a9411938b123d5b4d SHA256 31e7f79424360f963c6eae528a9d289db4b53c1f7fe4aa9de71201e9d14bc5af
 DIST cctbx-2010.03.29.2334.tar.gz 15570372 RMD160 e543578dbe6568f5f8f80b3ce7a20b10e01193bc SHA1 1442dbd5d1ef3b91e718dce039a24fc1637104d3 SHA256 e1fae804caaf8593c7a3f32e4544046f4c00293063d9099721578cc8fbd17213
-EBUILD cctbx-2009.11.01.0123-r1.ebuild 5746 RMD160 ea65055c3ecb4f90fea5850349e8d48a6062e792 SHA1 fbb89c8b722375504ae455dbf1511871f09f2df5 SHA256 7f15213ea692197e2b5f6e7a8d350a76d5456ad9b498b5569f510d6e1c1ce604
 EBUILD cctbx-2010.03.29.2334-r1.ebuild 5881 RMD160 deee9422031d740e93c4448d9b192d4a413fccc3 SHA1 3ce9443b9a3756dc090666cd947df0f6bc831b42 SHA256 a879efce871c0d3c1f4771df98e7e0a4835e0e0637605176920dcc50fde8d19c
-EBUILD cctbx-2010.03.29.2334-r2.ebuild 5665 RMD160 7f4866e6bf4fa2e7b2ffa57244b1c4e52ce969d7 SHA1 28b0855d693f323332ca1e922ae7afe5d740eba0 SHA256 f4b691c564fe6017da12002a15274ace64f6ec873b6792b55da73f9cd4041d0b
 EBUILD cctbx-2010.03.29.2334-r3.ebuild 5935 RMD160 e09e5fa8ff0f93bb28df2bbde41fc3a566823ba7 SHA1 0d192b580152f75907c2658cfe789aef18793f56 SHA256 7ee32c30316a692c2917aadc483e6ecc2a216ca339740e26aba4f48fc349d5ea
-MISC ChangeLog 2646 RMD160 2acc4328c920823bafb1be1bb1420bef290ebdb1 SHA1 2bad5692d3cd6f5d84a2a003120cacb92f4ea17d SHA256 303c8284008660d9370b375e6291f284544958609d45308ab651e3384598842a
+MISC ChangeLog 2778 RMD160 e85d6499f7e8ac9860ba26f97c7be66916aef227 SHA1 66e3fbe73601c80a00da4a4cfef3ba10eb8599a4 SHA256 e7b799ba9ceb3c1de3bc85c0390f85c01846e045328efb8b5708b0eadea6eaea
 MISC metadata.xml 767 RMD160 c2fc3bcc534e407e6066ee98beb6878d78a0f6e9 SHA1 a653677e160cf0726e1747b06b5d0cd95e51ac5f SHA256 ef36fc1a1d5d657ba67f88b303f08eef5a1a814d22a2091c07616dc16928e3fa
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk0xssYACgkQgAnW8HDreRa3cgCgoqsGCCXReb7REi4tK75fmJt6
-8AIAoK9hccWlpnuXANhC+SyNSol+uC61
-=D8C8
+iEYEARECAAYFAk0xuo0ACgkQgAnW8HDreRYUDgCgr7WcVDZmUDyOWnJuP3BKjZjD
+IDMAniVp4RSbaCdeIkf3wi6YpFc4WL8Q
+=iMiC
 -----END PGP SIGNATURE-----
